--- a/ancient.html
+++ b/ancient.html
@@ -17,48 +17,46 @@
     </div>
     <div id="main">
         <div class="grid">
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Ambum Stone" pArtist="N/A" pStyle = "Greywacke Stone ">
+
                 <img src="paintings/Ancient/Ambum_Stone.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Anthropomorphic stele" pArtist="N/A" pStyle = "Sandstone">
+
                 <img src="paintings/Ancient/Anthropomorphic_Stele.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Apollo 11 Stone" pArtist="N/A" pStyle = "Charcoal on Stone">
+
                 <img src="paintings/Ancient/Apollo_11_Stones.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = " Bushel with ibex motifs" pArtist="N/A" pStyle = " Painted Terra Cotta">
+
                 <img src="paintings/Ancient/Bushel_with_Ibex_Motifs.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Camelid Sacrum in the shape of a canine" pArtist="N/A" pStyle = "Fossilized Remains">
+
                 <img src="paintings/Ancient/Camelid_Sacrum_in_the_shape_of_a_canine.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Great Hall of Bulls" pArtist="N/A" pStyle = "Prehistoric Spray Painting">
                 <img src="paintings/Ancient/Great_Hall_of_the_Bulls.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Jade Cong" pArtist="N/A" pStyle = "Carved Jade">
                 <img src="paintings/Ancient/Jade_Cong.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Running Horned Woman" pArtist="N/A" pStyle = "Pigment on Rock">
+
                 <img src="paintings/Ancient/Running_Horned_Woman.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Stonehenge" pArtist="N/A" pStyle = " Neolithic">
+
                 <img src="paintings/Ancient/Stonehenge.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Terra cotta fragment" pArtist="N/A" pStyle = "Terra cotta (incised)">
+
                 <img src="paintings/Ancient/Terra_cotta_fragment.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Tlatilco female figurine" pArtist="N/A" pStyle = "Ceramic">
+
                 <img src="paintings/Ancient/Tlatilco_female_figurine.png">
             </div>
         </div>
