--- a/medieval.html
+++ b/medieval.html
@@ -17,28 +17,27 @@
     </div>
     <div id="main">
         <div class="grid">
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Ognissanti Madonna" pArtist="Giotto di Bondone" pStyle = "Tempera on Panel">
+
                 <img src="paintings/Medieval/Untitled_Artwork 1.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Lamentation" pStyle = "Fresco" pArtist = "Giotto di Bondone">
                 <img src="paintings/Medieval/Untitled_Artwork 2.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Virgin (Theotokos) and Child between Saints Theodore and George" pArtist="N/A" pStyle = "Transitional Piece">
+
                 <img src="paintings/Medieval/Untitled_Artwork 3.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "The Flight into Egypt" pArtist="Giotto" pStyle = "Plaster">
+
                 <img src="paintings/Medieval/Untitled_Artwork 4.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Duccio Maesta" pArtist = "Ducio di Buoninsegna" pStyle = "Tempera on Panel ">
+
                 <img src="paintings/Medieval/Untitled_Artwork 5.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Wilton Diptych" pArtist="Richard II" pStyle = "Egge on Oak">
+
                 <img src="paintings/Medieval/Untitled_Artwork.png">
             </div>
 
