--- a/modern.html
+++ b/modern.html
@@ -19,44 +19,40 @@
     </div>
     <div id="main">
         <div class="grid">
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Earth’s Creation" pArtist="Emily Kame Kngwarreye" pStyle = "Abstract">
+
                 <img src="paintings/Modern/Earths_Creation.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Electronic Superhighway: Continental U.S., Alaska, Hawaii" pArtist="Nam June Paik" pStyle = "Contemporary Installation">
                 <img src="paintings/Modern/Electronic_Superhighway.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "I Still Face You" pArtist="Njideka Akunyili Crosby" pStyle = "Postcolonial">
+
                 <img src="paintings/Modern/I_Still_Face_You.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Olive Oil" pArtist="Jean-Michel Basquiat" pStyle = "Neo-expressionism">
                 <img src="paintings/Modern/Olive_Oil.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "preying Mantra" pArtist="Wangechi Mutu" pStyle = "Postcolonial & Exoticism">
                 <img src="paintings/Modern/Preying_Mantra.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" ptitle = "Pure Land" pArtist="Mariko Mori" pStyle = "Contemporary">
                 <img src="paintings/Modern/Pure_Land.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Rebellious Silence" pArtist="Shirin Neshat" pStyle = "Contemporary">
+
                 <img src="paintings/Modern/Rebellious_Silence.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Stadia II" pArtist="Julie Mehretu" pStyle = "Abstraction & Utopia">
+
                 <img src="paintings/Modern/Stadia_II.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "The Red Dune" pArtist="Hennie Niemann" pStyle = "Abstract">
+
                 <img src="paintings/Modern/The_Red_Dune.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Trade (Gifts for Trading Land with White People)" pArtist="Jaune Quick-to-See Smith" pStyle = "Abstract Expressionism">
+
                 <img src="paintings/Modern/Trade.png">
             </div>
         </div>
