--- a/renaissance.html
+++ b/renaissance.html
@@ -19,44 +19,44 @@
     </div>
     <div id="main">
         <div class="grid">
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Calling of Saint Matthew" pArtist="Caravaggio" pStyle = "Oil on Canvas">
+
                 <img src="paintings/Renaissance/Calling_of_Saint_Matthew.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Entombment of Christ" pArtist="Jacobo da Pontormo" pStyle = "Oil on Wood/ Mannerist">
+
                 <img src="paintings/Renaissance/Entombment_of_Christ.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Frontispiece of the Codex Mendoza" pArtist="N/A" pStyle = "Pigment on Paper">
+
                 <img src="paintings/Renaissance/Frontispiece_of_the_Codex_Mendoza.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Hunters in the Snow" pArtist="Pieter Bruegel" pStyle = "Oil Pain on Wood Panel">
+
                 <img src="paintings/Renaissance/Hunters_in_the_Snow.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "School of Athens" pArtist="Raphael" pStyle = "Fresco">
+
                 <img src="paintings/Renaissance/School_of_Athens.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Madonna and Child with Two Angels" pArtist="Fra Filipo Lippi" pStyle = "Tempera on Wood">
+
                 <img src="paintings/Renaissance/Madonna_and_Child_with_Two_Angels.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "The Arnolfini Portrait" pArtist="Jan van Eyck" pStyle = "Oil paint on oak panel">
+
                 <img src="paintings/Renaissance/The_Arnolfini_Portrait.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "The Birth of Venus" pArtist="Sandro Botticelli" pStyle = "Tempera on Canvas">
+
                 <img src="paintings/Renaissance/The_Birth_of_Venus.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "The Last Supper " pArtist="Leonardo da Vinci" pStyle = "Oil and tempera">
+
                 <img src="paintings/Renaissance/The_Last_Supper.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
-                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "The Venus of Urbino " pArtist="Titian" pStyle = "Oil on Canvas">
+
                 <img src="paintings/Renaissance/The_Venus_of_Urbino.png">
             </div>
         </div>
