--- a/romance.html
+++ b/romance.html
@@ -18,28 +18,28 @@
     </div>
         <div id = "main">
             <div class="grid">
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/romance/Liberty_Leading_the_People.png">
+                <div class="painting grid-item" pTitle = "Liberty Leading the People" pArtist="Eugene Delacroix" pStyle = "French Romanticism">
+                    <img src = "paintings/romance/Liberty_Leading_the_People.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Newton" pArtist="William Blake" pStyle = "Idealization">
                 <img src = "paintings/romance/Newton.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Saturn Devouring his Son" pArtist="Francisco Goya" pStyle = "Mythological Romanticism">
                 <img src = "paintings/romance/Saturn_Devouring_his_Son.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "The Fighting Temeraire" pArtist="Joseph Mallord William Turner" pStyle = "Historical Romanticism">
                 <img src = "paintings/romance/The_Fighting_Temeraire.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "The Hay Wain" pArtist="John Constable" pStyle = "Pastoral">
                 <img src = "paintings/romance/The_Hay_Wain.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "The Kiss" pArtist="Francesco Hayez" pStyle = "Classical Romanticism">
                 <img src = "paintings/romance/The_Kiss.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "The Ninth Wave" pArtist="Ivan Aivazovsky" pStyle = "Marinist">
                 <img src = "paintings/romance/The_Ninth_Wave.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "The Oxbow" pArtist="Thomas Cole" pStyle = "Landscape Romanticism">
                 <img src = "paintings/romance/The_Oxbow.png">
             </div>
             <!-- <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
